# role-aware-crisis-summarization

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  t5-training-and-eval-notebook.ipynb
data/preferences/: dpo_preferences_t5_v2_vs_gpt4o_reward_v1_test.jsonl  dpo_preferences_t5_v2_vs_gpt4o_reward_v1_validation.jsonl
data/rewards/: t5_baseline_v1_reward_scores.jsonl  t5_baseline_v1_reward_scores_tweet_relevance_minicheck.jsonl
docs/: future_research_directions.md  project_timeline.md  reward_specification.md  reward_specification_v1.md  reward_system_evolution_and_future_design.md
notebooks/: scoring-notebook.ipynb  t5-dpo.ipynb  t5_baseline_scoring.ipynb
prompts/: base_summaries_generation_v1.txt  summary_generation_prompt_v2.txt
reports/key_results/: dpo_preferences_by_role.csv  gpt4o_reward_distributions.csv  project_metrics_overview.md  t5_baseline_v2_reward_distributions.csv  t5_baseline_v2_reward_overall_metrics.csv  t5_dpo_qualitative_samples_by_role.jsonl  t5_small_baseline_v1_metrics.csv  t5_small_baseline_v2_metrics.csv  three_model_reward_comparison.csv  three_model_reward_comparison_by_role.csv
scripts/: analyze_reward_scores.py  analyze_summary_reward_dataset.py  build_dpo_preference_dataset.py  build_prediction_reward_report.py  decode_base64_zip.ps1  evaluate_t5_baseline.py  generate_base_summaries.py  generate_summaries.py  generate_training_dataset.py  generate_training_schema_lib.py  inspect_original_frecs_dataset.py  prepare_t5_baseline_data.py  score_rewards.py  smoke_test_openai.py  train_t5_baseline.py  train_t5_dpo.py
(+61 files in other folders)
