[project]
name = "role-aware-crisis-summarization"
version = "0.1.0"
description = "Role-aware crisis tweet summarization using transformer baselines, automated reward scoring, and preference optimization."
readme = "README.md"
requires-python = ">=3.13"
authors= [
    { name = "Fabrice Faustin" }
]
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "protobuf>=7.35.0",
    "python-dotenv>=1.2.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "transformers>=5.10.2",
]


[tool.uv]
package = true
